test/spec/simd/simd_i16x8_sat_arith.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_i16x8_sat_arith.wast
(;; STDOUT ;;;
out/test/spec/simd/simd_i16x8_sat_arith.wast:609: assert_malformed passed:
  out/test/spec/simd/simd_i16x8_sat_arith/simd_i16x8_sat_arith.1.wat:1:22: error: unexpected token "i16x8.add_sat", expected an instr.
  (func (result v128) (i16x8.add_sat (v128.const i16x8 1 1 1 1 1 1 1 1) (v128.c...
                       ^^^^^^^^^^^^^
out/test/spec/simd/simd_i16x8_sat_arith.wast:612: assert_malformed passed:
  out/test/spec/simd/simd_i16x8_sat_arith/simd_i16x8_sat_arith.2.wat:1:22: error: unexpected token "i16x8.sub_sat", expected an instr.
  (func (result v128) (i16x8.sub_sat (v128.const i16x8 1 1 1 1 1 1 1 1) (v128.c...
                       ^^^^^^^^^^^^^
out/test/spec/simd/simd_i16x8_sat_arith.wast:615: assert_malformed passed:
  out/test/spec/simd/simd_i16x8_sat_arith/simd_i16x8_sat_arith.3.wat:1:22: error: unexpected token "i16x8.mul_sat", expected an instr.
  (func (result v128) (i16x8.mul_sat (v128.const i16x8 1 1 1 1 1 1 1 1) (v128.c...
                       ^^^^^^^^^^^^^
out/test/spec/simd/simd_i16x8_sat_arith.wast:618: assert_malformed passed:
  out/test/spec/simd/simd_i16x8_sat_arith/simd_i16x8_sat_arith.4.wat:1:22: error: unexpected token "i16x8.div_sat", expected an instr.
  (func (result v128) (i16x8.div_sat (v128.const i16x8 1 1 1 1 1 1 1 1) (v128.c...
                       ^^^^^^^^^^^^^
out/test/spec/simd/simd_i16x8_sat_arith.wast:623: assert_invalid passed:
  error: type mismatch in i16x8.add_sat_s, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:624: assert_invalid passed:
  error: type mismatch in i16x8.add_sat_u, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:625: assert_invalid passed:
  error: type mismatch in i16x8.sub_sat_s, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:626: assert_invalid passed:
  error: type mismatch in i16x8.sub_sat_u, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:631: assert_invalid passed:
  error: type mismatch in i16x8.add_sat_s, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:639: assert_invalid passed:
  error: type mismatch in i16x8.add_sat_s, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:647: assert_invalid passed:
  error: type mismatch in i16x8.add_sat_u, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:655: assert_invalid passed:
  error: type mismatch in i16x8.add_sat_u, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:663: assert_invalid passed:
  error: type mismatch in i16x8.sub_sat_s, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:671: assert_invalid passed:
  error: type mismatch in i16x8.sub_sat_s, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:679: assert_invalid passed:
  error: type mismatch in i16x8.sub_sat_u, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i16x8_sat_arith.wast:687: assert_invalid passed:
  error: type mismatch in i16x8.sub_sat_u, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
220/220 tests passed.
;;; STDOUT ;;)
